# shift_project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0fd3e8493e2d_initial.py  3a6670e90021_initial_migration.py  3ecdb2db5a4a_initial_migration.py  a3318981a10d_new_rooms_table.py  c6236a129b7c_create_new_rooms_table.py  d91f8f28a25b_create_rooms.py  ddb996f27066_table_rooms_upgrade.py  f5254f19952a_new_final_rooms_table_migration.py
docs/: alembic.md  api.md  config.md  dependencies.md  docker.md  exceptions.md  models.md  pyproject.md  questions.md  repositories.md  schemas.md  security.md  services.md  tests.md
scripts/local/: create_secret_key.py
scripts/runtime/: entrypoint.sh
src/app/: main.py
src/app/api/v1/: admin.py  auth.py  booking.py  room.py  rooms.py  slot.py  user.py
src/app/core/: base.py  config.py  database.py  exception_handlers.py  exceptions.py  models.py  schema.py  security.py
src/app/dependencies/: auth.py
src/app/models/: __init__.py  booking.py  room.py  slot.py  user.py
src/app/repositories/: booking.py  room.py  slot.py  user.py
src/app/schemas/: booking.py  room.py  slot.py  user.py
src/app/services/: auth.py  booking.py  room.py  slot.py  user.py
src/meet_rooms/: main.py
tests/: conftest.py  test_auth.py  test_booking.py  test_schemas.py  test_security.py
tests/integration/: conftest.py  test_auth.py
tests/unit/: test_schemas.py
