[project]
name = "meet_rooms"
version = "0.1.0"
description = "Приложение для бронирования переговорных комнат."
authors = [
    {name = "akel-la",email = "a.l.e.k.s.e.y.u@mail.ru"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"

dependencies = [
]

[dependency-groups]
dev = ["ruff (>=0.15.15,<0.16.0)", "pre-commit (>=4.6.0,<5.0.0)"]
test = []
linter = []

[tool.poetry]
packages = [{include = "meet_room", from = "src"}]


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "SIM",
    "TCH",
    "TID",
    "Q",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["meet_rooms"]
force-single-line = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
