[project]
name = "meet_rooms"
version = "0.1.0"
description = "Приложение для бронирования переговорных комнат."
authors = [
    {name = "akel-la",email = "a.l.e.k.s.e.y.u@mail.ru"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"

dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]

[dependency-groups]
dev = [
    "ruff (>=0.15.15,<0.16.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
    ]
test = [
    "pytest (>=9.0.3,<10.0.0)"
    ]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "SIM",
    "TCH",
    "TID",
    "Q",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
